2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/gettext_strings_test.in: A test to check for strings not
	marked for translation.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* autogen.sh: Exclude unused libgcrypt files from translation.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Simplify few strings.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Mark few forgotten strings for translation.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/linux.c: Use grub_dprintf for debug statements
	rather than printf.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/video/readers/jpeg.c: Use grub_dprintf for debug statements
	rather than printf.
	* grub-core/video/readers/tga.c: Likewise.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/priority_queue_unit_test.cc: New test.

2013-05-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/font/font.c: Use grub_dprintf for debug statements rather
	than printf.

2013-05-06  Andrey Borzenkov <arvidjaar@gmail.com>

	Reimplement grub-reboot to not depend on saved_entry. Use next_entry
	variable for one time boot menu entry.

2013-05-05  Bean  <bean123ch@gmail.com>

	* grub-core/commands/testspeed.c: New command testspeed.

2013-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Factor-out human-size printing.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Agglomerate more mallocs to speed-up gfxterm.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Speed-up gfxterm by slightly agglomerating mallocs.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	More video checks.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Speed-up gfxterm by saving intermediate results in index+alpha
	format.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/lib/functional_test.c: Don't stop on first failed
	test.

2013-05-04  Vladimir Serbinenko  <phcoder@gmail.com>
